re PR rtl-optimization/24257 (ICE: in extract_insn with -O -fgcse -fgcse-sm)

2006-01-16  Steven Bosscher  <stevenb.gcc@gmail.com>
	Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/24257
	* gcse.c (find_moveable_store): Only consider a store movable
	when the SET_SRC of the insn can be assigned to a register.

	* gcc.dg/torture/pr24257.c: New testcase.

Co-Authored-By: Richard Guenther <rguenther@suse.de>

From-SVN: r109744